cert-manager/ingress-route-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutesimples-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host('ellison.net')
    kind: Rule
    services:
      - name: nginx-service
        port: 80
  tls:
    secretName: ellison-net-secret
