cert-manager/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutesimples
spec:
  entryPoints:
    - web 
  routes:
  - match: Host('ellison.net')
    kind: Rule
    services:
      - name: nginx-service
        port: 80
